@@ -356,6 +356,8 @@ Library
 Extension Modules
 -----------------
 
+- Issue #7670: sqlite3: Fixed crashes when operating on closed connections.
+
 - Stop providing crtassem.h symbols when compiling with Visual Studio 2010, as
   msvcr100.dll is not a platform assembly anymore.
 
